# ai_kb_agent_back_end

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  chat.py  documents.py  health.py  knowledge_bases.py  router.py
app/core/: config.py  errors.py  exception_handlers.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  chat_conversation.py  chat_message.py  document.py  document_chunk.py  document_chunk_embedding.py  knowledge_base.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  document.py  knowledge_base.py  response.py
app/services/: __init__.py  chat.py  document_embeddings.py  document_files.py  document_parsing.py  knowledge_bases.py
tests/: conftest.py  test_api_workflows.py
