[project]
name = "ai-kb-agent-back-end"
version = "0.1.0"
description = "FastAPI backend for the AI knowledge base agent system."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24.0",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
